# dockzen-launcher

./: CMakeLists.txt  Doxyfile  README.md  docker-launcher.pc.in
html/: annotated.html  annotated_dup.js  classes.html  dir_000001_000004.html  dir_000002_000004.html  dir_000003_000004.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_804aa5b231fdebbaeb68de0d0fa5299e.html  dir_804aa5b231fdebbaeb68de0d0fa5299e.js  dir_804aa5b231fdebbaeb68de0d0fa5299e_dep.map  dir_804aa5b231fdebbaeb68de0d0fa5299e_dep.md5  dir_9a6eb15a801b08c41ecaeba26518b45e.html  dir_9a6eb15a801b08c41ecaeba26518b45e.js  dir_9a6eb15a801b08c41ecaeba26518b45e_dep.map  dir_9a6eb15a801b08c41ecaeba26518b45e_dep.md5  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  dir_b70cef329ab63608be68a5140d5754da.html  dir_b70cef329ab63608be68a5140d5754da.js  dir_b70cef329ab63608be68a5140d5754da_dep.map  dir_b70cef329ab63608be68a5140d5754da_dep.md5  docker-launcher__error_8c.html  docker-launcher__error_8c_source.html  docker_8h.html  docker_8h_source.html  docker__launcher__capi_8h.html  docker__launcher__capi_8h.js  docker__launcher__capi_8h__dep__incl.map  docker__launcher__capi_8h__dep__incl.md5  docker__launcher__capi_8h_source.html  docker__launcher__capi__cmd_8c.html  docker__launcher__capi__cmd_8c__incl.map  docker__launcher__capi__cmd_8c__incl.md5  docker__launcher__capi__cmd_8c_source.html  docker__launcher__capi__main_8c.html  docker__launcher__capi__main_8c.js  docker__launcher__capi__main_8c__incl.map  (+241 more)
src/: CMakeLists.txt  (+6 more)
src/capi-docker-launcher/: CMakeLists.txt  docker_launcher_capi.h  docker_launcher_capi_cmd.c  docker_launcher_capi_main.c
src/docker-launcher/: CMakeLists.txt  __docker_launcher_main_multi.c__  docker_launcher_connect.c  docker_launcher_connect.h  docker_launcher_engine.c  docker_launcher_engine.h  docker_launcher_json.c  docker_launcher_json.h  docker_launcher_main.c  docker_launcher_parser.c  docker_launcher_parser.h  docker_launcher_service.c  docker_launcher_service.h  docker_launcher_statemachine.c  docker_launcher_statemachine.h
src/docker-launcher-client/: CMakeLists.txt  docker-launcher_client.c  docker-launcher_client.h  docker-launcher_client_process.c
(+62 files in other folders)
