LINK_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/include)

SET(DOCKER_LAUNCHER_API "capi-docker-launcher")
FILE(GLOB PROJECT_SRCS *.c )

INCLUDE(FindPkgConfig)
pkg_check_modules(api_pkgs REQUIRED dlog glib-2.0 gio-2.0 capi-network-wifi )
INCLUDE_DIRECTORIES(${api_pkgs_INCLUDE_DIRS})
LINK_DIRECTORIES(${api_pkgs_LIBRARY_DIRS})


ADD_LIBRARY(${DOCKER_LAUNCHER_API} SHARED ${PROJECT_SRCS})
TARGET_LINK_LIBRARIES(${DOCKER_LAUNCHER_API}  ${api_pkgs_LIBRARIES})
INSTALL(TARGETS ${DOCKER_LAUNCHER_API} DESTINATION ${LIB_INSTALL_DIR})

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
FILE(GLOB PROJECT_HEADER ${CMAKE_SOURCE_DIR}/src/*.h)
INSTALL(FILES ${PROJECT_HEADER} DESTINATION ${INCLUDE_INSTALL_DIR}/${DOCKER_LAUNCHER_API})
