PROJECT (docker-launcher-client)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/docker-launcher-client)

SET(DOCKER_LAUNCHER_CLIENT_SERVER "docker-launcher-client")
FILE(GLOB DOCKER_LAUNCHER_CLIENT_SERVER_SRCS *.c )

INCLUDE(FindPkgConfig)
pkg_check_modules(project_pkgs REQUIRED dlog gio-2.0 glib-2.0 )

INCLUDE_DIRECTORIES(${project_pkgs_INCLUDE_DIRS})
LINK_DIRECTORIES(${project_pkgs_LIBRARY_DIRS})


ADD_EXECUTABLE(${DOCKER_LAUNCHER_CLIENT_SERVER} ${DOCKER_LAUNCHER_CLIENT_SERVER_SRCS})
TARGET_LINK_LIBRARIES(${DOCKER_LAUNCHER_CLIENT_SERVER}  ${project_pkgs_LIBRARIES})
INSTALL(TARGETS ${DOCKER_LAUNCHER_CLIENT_SERVER} DESTINATION ${BIN_INSTALL_DIR})
